[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops"
version = "0.3.21"
authors = [
  { name="Alex Reibman", email="areibman@gmail.com" },
  { name="Shawn Qiu", email="siyangqiu@gmail.com" },
  { name="Braelyn Boynton", email="bboynton97@gmail.com" },
  { name="Howard Gil", email="howardbgil@gmail.com" }
]
description = "Observability and DevTool Platform for AI Agents"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.0.0,<3.0.0",
    "psutil>=5.9.8,<6.1.0",
    "termcolor>=2.3.0,<2.5.0",
    "PyYAML>=5.3,<7.0",
    "opentelemetry-api>=1.22.0,<2.0.0", # API for interfaces
    "opentelemetry-sdk>=1.22.0,<2.0.0", # SDK for implementation
    "opentelemetry-exporter-otlp-proto-http>=1.22.0,<2.0.0", # For OTLPSpanExporter
]

[dependency-groups]
dev = [
    "pytest==7.4.0",
    "pytest-depends",
    "pytest-asyncio",
    "pytest-vcr",
    "pytest-mock",
    "pyfakefs",
    "requests_mock==1.11.0",
    "ruff",
    "vcrpy>=6.0.0; python_version >= '3.8'"
 ]
ci = [
    "tach~=0.9",
]

[project.optional-dependencies]
langchain = [
    "langchain==0.2.14; python_version >= '3.8.1'"
]


[project.urls]
Homepage = "https://github.com/AgentOps-AI/agentops"
Issues = "https://github.com/AgentOps-AI/agentops/issues"

[tool.autopep8]
max_line_length = 120

[project.scripts]
agentops = "agentops.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
test_paths = [
    "tests",
]
addopts = "--import-mode=importlib --tb=short -p no:warnings"
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F401",  # Unused imports
    "E712",  # Comparison to True/False
    "E711",  # Comparison to None
    "E722",  # Bare except
    "F821",  # Undefined names
    "F841",  # Unused variables
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".github",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".vscode",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "examples",
    "node_modules",
    "site-packages",
    "venv",
    "tests/core_manual_tests",
]

[tool.setuptools]
packages = ["agentops"]
