[project]
name = "agentops-dev"
version = "0.1.0"
description = "Development dependencies for AgentOps monorepo"
requires-python = ">=3.12,<3.13"  # Match api's Python version requirement

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 