[project]
name = "builder"
version = "0.1.0"
description = "Build OpenTelemetry Collector with custom configurations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentops>=0.4.10",
    "jinja2>=3.1.6",
    "pydantic>=2.11.4",
    "tokencost>=0.1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "docker>=7.0.0",
    "PyJWT>=2.0.0",
]

[tool.setuptools]
packages = ["costs", "otelcollector_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
